Mise à jour automatique dashboard 08/02/2026 à 15:39

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
         <select id="site-select">
           <option value="Data FA">France Assureurs</option>
           <option value="Data AP">Assurance Prévention</option>
+          <option value="Data RR">Revue Risques</option>
         </select>
       </div>
       <div class="control-group">
