Mise à jour automatique dashboard 08/02/2026 à 16:26

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
   <div class="container">
     <header>
-      <h1>📊 Dashboard Matomo<span id="print-period"></span></h1>
+      <h1>📊 Reporting Sites - Tableau de bord <span id="print-period"></span></h1>
       <div class="header-controls">
         <button class="refresh-btn" onclick="refreshData()" title="Forcer le rechargement des données">🔄</button>
         <button class="export-btn" onclick="exportPDF()">📄 Export PDF</button>
