Mise à jour automatique dashboard 08/02/2026 à 22:35

--- a/index.html
+++ b/index.html
@@ -50,6 +50,33 @@
         </div>
       </div>
 
+      <div class="charts-grid">
+        <div class="table-container" style="height: auto; max-height: 400px; overflow-y: auto;">
+          <table id="sources-data-table">
+            <thead>
+              <tr>
+                <th>Source</th>
+                <th class="numeric">Visites</th>
+                <th class="numeric">%</th>
+              </tr>
+            </thead>
+            <tbody></tbody>
+          </table>
+        </div>
+        <div class="table-container" style="height: auto; max-height: 400px; overflow-y: auto;">
+          <table id="devices-data-table">
+            <thead>
+              <tr>
+                <th>Device</th>
+                <th class="numeric">Visites</th>
+                <th class="numeric">%</th>
+              </tr>
+            </thead>
+            <tbody></tbody>
+          </table>
+        </div>
+      </div>
+
       <div id="top-pages-block">
         <h2 class="section-title" id="section-top-pages">🏆 Top 10 des pages les plus consultées</h2>
         <div class="table-container">
