Mise à jour automatique dashboard 08/02/2026 à 23:13

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
       <h2 class="section-title">Données principales</h2>
       <div class="kpis-grid" id="kpis-grid"></div>
 
-      <h2 class="section-title" id="section-repartition">Sources de trafic et devices</h2>
+      <h2 class="section-title" id="section-repartition">Sources de trafic et périphériques</h2>
       <div class="charts-grid">
         <div class="chart-container">
           <canvas id="sourcesChart"></canvas>
