--- a/index.html
+++ b/index.html
@@ -11,8 +11,11 @@
 <body>
   <div class="container">
     <header>
-      <div class="brand-container">
+      <div class="header-left">
         <img id="site-logo" src="" alt="Logo" class="header-logo">
+      </div>
+
+      <div class="header-center">
         <h1>Reporting <span id="print-period"></span></h1>
       </div>
 
