--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <title>Reporting Sites - Tableau de bord</title>
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-datalabels@2"></script>
+  <script src="https://html2canvas.hertzen.com/dist/html2canvas.min.js"></script>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -14,11 +15,9 @@
       <div class="header-left">
         <img id="site-logo" src="" alt="Logo" class="header-logo">
       </div>
-
       <div class="header-center">
         <h1>Reporting <span id="print-period"></span></h1>
       </div>
-
       <div class="header-controls">
         <button class="refresh-btn" onclick="refreshData()" title="Forcer le rechargement des données">🔄</button>
         <button class="export-btn" onclick="exportPDF()">📄 Export PDF</button>
@@ -32,6 +31,7 @@
         <select id="site-select">
           <option value="Data FA">France Assureurs</option>
           <option value="Data AP">Assurance Prévention</option>
+          <option value="Data TF">— Nos Temps Forts</option>
           <option value="Data RR">Revue Risques</option>
         </select>
       </div>
@@ -44,49 +44,59 @@
     <div class="loading" id="loading">Chargement des données...</div>
 
     <div id="dashboard-content" style="display:none;">
-      <h2 class="section-title">Données principales</h2>
-      <div class="kpis-grid" id="kpis-grid"></div>
-
-      <h2 class="section-title" id="section-repartition">Sources de trafic et périphériques</h2>
-      <div class="charts-grid">
-        <div class="chart-container">
-          <canvas id="sourcesChart"></canvas>
-        </div>
-        <div class="chart-container">
-          <canvas id="devicesChart"></canvas>
-        </div>
+      
+      <div class="chart-container kpi-wrapper" id="container-kpis">
+        <h3 class="integrated-title" id="title-kpis"></h3>
+        <button class="chart-dl-btn" onclick="downloadElement('container-kpis')" title="Télécharger">💾</button>
+        <div class="kpis-grid" id="kpis-grid"></div>
       </div>
 
       <div class="charts-grid">
-        <div class="table-container" style="height: auto; max-height: 400px; overflow-y: auto;">
-          <table id="sources-data-table">
-            <thead>
-              <tr>
-                <th>Source</th>
-                <th class="numeric">Visites</th>
-                <th class="numeric">%</th>
-              </tr>
-            </thead>
-            <tbody></tbody>
-          </table>
+        <div class="chart-container" id="container-sources">
+          <h3 class="integrated-title" id="title-sources"></h3>
+          <button class="chart-dl-btn" onclick="downloadElement('container-sources')" title="Télécharger">💾</button>
+          <div class="canvas-wrapper">
+            <canvas id="sourcesChart"></canvas>
+          </div>
+          <div class="mini-table-container">
+            <table id="sources-data-table" class="data-table-integrated">
+              <thead>
+                <tr>
+                  <th>Source</th>
+                  <th class="numeric">Visites</th>
+                  <th class="numeric">%</th>
+                </tr>
+              </thead>
+              <tbody></tbody>
+            </table>
+          </div>
         </div>
-        <div class="table-container" style="height: auto; max-height: 400px; overflow-y: auto;">
-          <table id="devices-data-table">
-            <thead>
-              <tr>
-                <th>Périphérique</th>
-                <th class="numeric">Visites</th>
-                <th class="numeric">%</th>
-              </tr>
-            </thead>
-            <tbody></tbody>
-          </table>
+
+        <div class="chart-container" id="container-devices">
+          <h3 class="integrated-title" id="title-devices"></h3>
+          <button class="chart-dl-btn" onclick="downloadElement('container-devices')" title="Télécharger">💾</button>
+          <div class="canvas-wrapper">
+            <canvas id="devicesChart"></canvas>
+          </div>
+          <div class="mini-table-container">
+            <table id="devices-data-table" class="data-table-integrated">
+              <thead>
+                <tr>
+                  <th>Périphérique</th>
+                  <th class="numeric">Visites</th>
+                  <th class="numeric">%</th>
+                </tr>
+              </thead>
+              <tbody></tbody>
+            </table>
+          </div>
         </div>
       </div>
 
       <div id="top-pages-block">
-        <h2 class="section-title" id="section-top-pages">🏆 Top 10 des pages les plus consultées</h2>
-        <div class="table-container">
+        <div class="table-container relative-container" id="container-top-pages">
+          <h3 class="integrated-title" id="title-top-pages"></h3>
+          <button class="chart-dl-btn" onclick="downloadElement('container-top-pages')" title="Télécharger">💾</button>
           <table id="top-pages-table" class="top-pages-table">
             <thead></thead>
             <tbody></tbody>
@@ -94,21 +104,28 @@
         </div>
       </div>
 
-      <h2 class="section-title">Évolution dans le temps</h2>
       <div class="charts-grid">
-        <div class="chart-container chart-full">
-          <canvas id="evolutionChart"></canvas>
+        <div class="chart-container chart-full" id="container-evolution">
+          <h3 class="integrated-title" id="title-evolution"></h3>
+          <button class="chart-dl-btn" onclick="downloadElement('container-evolution')" title="Télécharger">💾</button>
+          <div class="canvas-wrapper full-size">
+            <canvas id="evolutionChart"></canvas>
+          </div>
         </div>
       </div>
 
       <div id="comparison-section" style="display:none;">
-        <h2 class="section-title" id="section-comparison">Comparaison avec l'année précédente</h2>
         <div class="charts-grid">
-          <div class="chart-container chart-full">
-            <canvas id="comparisonChart"></canvas>
+          <div class="chart-container chart-full" id="container-comparison">
+            <h3 class="integrated-title" id="title-comparison"></h3>
+            <button class="chart-dl-btn" onclick="downloadElement('container-comparison')" title="Télécharger">💾</button>
+            <div class="canvas-wrapper full-size">
+              <canvas id="comparisonChart"></canvas>
+            </div>
           </div>
         </div>
       </div>
+
     </div>
   </div>
 
